After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701987 - Erroneous warning when the "encrypt to self" key is selected
Erroneous warning when the "encrypt to self" key is selected
Status: RESOLVED FIXED
Product: seahorse
Classification: Applications
Component: Nautilus
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Seahorse Maintainer
Seahorse Maintainer
Depends on:
Blocks:
 
 
Reported: 2013-06-11 08:25 UTC by Jérémy Bobbio
Modified: 2013-06-18 13:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Avoid repeating the self encryption key in cryptui_key_chooser_get_recipients() (1.34 KB, patch)
2013-06-11 08:25 UTC, Jérémy Bobbio
committed Details | Review

Description Jérémy Bobbio 2013-06-11 08:25:47 UTC
Created attachment 246482 [details] [review]
Avoid repeating the self encryption key in cryptui_key_chooser_get_recipients()

tool/seahorse-tool.c:prompt_recipients() contains the following test:

                if (gerr == 0 && num != keys->len)
                    g_warning ("couldn't load all the keys (%d/%d) from GPGME", keys->len, num);

This assumes that cryptui_prompt_recipients() will not return any duplicated recipients. Unfortunately, it can currently happen when the key selected
with the "always encrypt to self" option is also selected in the recipient list.

The attached patch modifies cryptui_key_chooser_get_recipients() to skip
adding the key twice.

This is also related to:
https://bugzilla.gnome.org/show_bug.cgi?id=415268
Comment 1 Stef Walter 2013-06-18 13:40:10 UTC
Attachment 246482 [details] pushed as f110e1c - Avoid repeating the self encryption key in cryptui_key_chooser_get_recipients()