Avoid repeating the self encryption key in cryptui_key_chooser_get_recipients()

When using self encryption, cryptui_key_chooser_get_recipients() would
previously always prepend the key to the recipient list. This is uneeded
if the key is already in there.

This change makes prompt_recipients() in seahorse-tool.c happier when
selecting the key using for signing in the recipient list.

https://bugzilla.gnome.org/show_bug.cgi?id=701987